# Image-Processing

task1/: B.h  CMakeLists.txt  E.h  G.h  N.h  main.cpp  popl.hpp
task1/task1/: B.cpp  B.h  E.cpp  E.h  G.cpp  G.h  N.cpp  N.h
task1/task2/: C.cpp  C.h  H.cpp  H.h  O.cpp  O.h  S.cpp  S.h
task1/task3/: M.cpp  M.h  R.cpp  R.h
task1/task4/: F.cpp  F.h  T.cpp  T.h
